Publish sixth draft.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -25,6 +25,7 @@ John Cowan
   <li>Draft #3 published: 2015/10/29</li>
   <li>Draft #4 published: 2015/11/2</li>
   <li>Draft #5 published: 2015/11/8</li>
+  <li>Draft #6 published: 2015/11/10</li>
 </ul>
 
 <h1>Abstract</h1>
