--- a/srfi-128.html
+++ b/srfi-128.html
@@ -26,6 +26,7 @@ John Cowan
   <li>Draft #4 published: 2015/11/2</li>
   <li>Draft #5 published: 2015/11/8</li>
   <li>Draft #6 published: 2015/11/10</li>
+  <li>Draft #7 published: 2015/11/23</li>
 </ul>
 
 <h1>Abstract</h1>
