--- a/srfi-128.html
+++ b/srfi-128.html
@@ -396,7 +396,7 @@ is evaluated and its value returned.  If neither is true,
 <h1>Implementation</h1>
 
 
-<p>The <a href="http://comparators.tar.gz/" target="_blank">sample implementation</a> 
+<p>The <a href="comparators.tar.gz" target="_blank">sample implementation</a> 
 is found in the repository of this SRFI.  It contains the following files.</p>
 <ul><li><code>comparators-impl.scm</code> - the record type definition and most of the procedures</li>
 <li><code>default.scm</code> - a simple implementation of the default constructor, which should be improved by implementers to handle records and implementation-specific types</li>
